<resources>
    <string name="app_name">TopSecret</string>

    <string name="andrew_intro">Once upon a time there was a man named Andrew who was browsing Tinder…</string>
    <string name="slide_2_tinder">when he saw the most beautiful girl, whose name was Jenna, and immediately swiped right.</string>
    <string name="slide_3_opening_line">Jenna thought Andrew\'s opening was going to be a dick joke, but instead it was the start of a beautiful relationship…</string>
    <string name="slide_4_moore_mesa">On December 21st 2014 they decided to meet in person and take a walk around Moore Mesa, where they bonded over their crazy families and watched the sunset.</string>
    <string name="slide_5_christmas_break">They went their separate ways over Christmas break but they were constantly texting and sharing photos.</string>
    <string name="slide_6_jan_3rd">On January 3rd 2015, they took a moonlit walk along the beach, where they kissed for the first time. Although the beach was cold they stayed out until 4 am.</string>
    <string name="slide_7_gone_girl">For their first public date they went to see Gone Girl. Surprisingly, Andrew did not runaway (jk)</string>
    <string name="slide_8_smitten">Soon after they became smitten with each other and would spend most of their spare time together. In their spare time they partook in activities such as… </string>
    <string name="slide_9_activities">Bowling, eating, watching soccer, going to the beach and… </string>

    <string name="slide_10_grand_budapest">Watching The Grand Budapest Hotel. ;) </string>
    <string name="slide_11_pre_ankle">Things were going swimmingly until, Andrew…</string>
    <string name="slide_13_broken_ankle">broke his ankle and would need surgery.</string>
    <string name="slide_14_through_sickness">Instead of saying peace out, Jenna, being an amazing girlfriend stuck by Andrew’s side. She would come over immediately after work and school to help nurse him back to health.</string>
    <string name="slide_15_wake_up">She slept over every night, and the best part was in the middle of the night Andrew would wake her up for a quick kiss before letting her drift back to sleep.</string>
    <string name="slide_16_mormon_and_meet">Life was easier once Andrew transitioned to a scooter and crutches. They even were able to see book of Mormon, and meet Jenna\'s family, which was a struggle because of Zeus\' tail and their tri-level house</string>
    <string name="slide_17_graduation">Jenna graduated college, and she moved in with Andrew, as they practically already lived together, and she screwed out of a job</string>
    <string name="slide_18_love_you">At Jenna\'s Graduation party in Sac, Andrew escaped the crowd to go to the bedroom where he wrote a simple program, to tell Jenna that he loves her for the first time.</string>
    <string name="slide_19_sb_life">Life strolled blissfully along, as the happy couple enjoyed their life together. </string>

    <!--TODO Start proofing here-->
    <string name="slide_20_spring_break_family">Spring Break 2016, they traveled to D.C. and Albany to see family…</string>
    <string name="slide_21_first_nyc">and to NYC where they met up with Alex</string>
    <string name="slide_22_portland_move">In July of 2017, Andrew and Jenna took a plunge and moved to Portland so Andrew could jump start his career.</string>
    <string name="slide_23_jennas_job">Not too long after moving, Jenna was able to find a job which she enjoys… for the most part.</string>
    <string name="love_portland">They soon came to love Portland with its laid back vibe, food, beautiful nature and Jenna\'s favorite…</string>
    <string name="portland_seasons">SEASONS!!!!!!!!!!!!!!</string>

    <string name="slide_25_blazers">They immersed themselves in the culture and became staunch Blazers fans, who have now attended over 15 games and know whole roster</string>
    <string name="slide_26_east_winter">Over this past winter break, they went off to the east coast again. It was the coldest either had experienced before. Plus weren’t told to pack proper shoes.</string>
    <string name="slide_27_east_winter_2">Still they had a blast seeing family and friends in New York and Boston. In Boston they met up with Yvette and Tanya where they attended a classy New Years Eve Party</string>
    <string name="slide_28_vancouver">For Jenna\'s 25th birthday they traveled to Canada with her siblings. This was their first time together in a new country.</string>
    <string name="hawaii">They are currently spending a week in the exotic land of Hawaii, enjoying their amazing life, but…</string>
    <string name="question">There is one things missing, and one question to ask…</string>
    <string name="blank"> </string>
    <string name="jenna">Jenna,</string>
    <string name="slide_image">slide_image</string>
    <string name="swipe">Swipe</string>
    <string name="right">Right</string>
    <string name="to">to</string>
    <string name="continue_string">Continue</string>
    <string name="arrow">arrow</string>


    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->
    <!--<string name="slide"></string>-->


</resources>
